--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description"
     content="AI-powered outfit rating app. Upload your fit, get instant AI analysis, and share your style with the community." />
   <meta name="theme-color" content="#ccff00" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="RateMyFit" />
 
