--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/sw.js')
+        navigator.serviceWorker.register('/sw.js?v=4')
           .then(registration => console.log('SW registered:', registration))
           .catch(error => console.log('SW registration failed:', error));
       });
