Rename app to DRIPR8 across UI, metadata, and sharing features

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   <link rel="manifest" href="/manifest.json" />
 
-  <title>Rate My Fit - AI Outfit Analyzer</title>
+  <title>DRIPR8 - AI Outfit Analyzer</title>
 
   <!-- Service Worker Registration -->
   <script>
